template.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: _USERNAME_-factory
  labels:
    kubernetes.io/metadata.name: _USERNAME_-factory
    username: _USERNAME_
---
kind: Namespace
apiVersion: v1
metadata:
  name: _USERNAME_-machinery
  labels:
    kubernetes.io/metadata.name: _USERNAME_-machinery
    username: _USERNAME_
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-_USERNAME_-projects
  namespace: _USERNAME_-factory
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          username: _USERNAME_
  podSelector: {}
  policyTypes:
  - Ingress
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-_USERNAME_-projects
  namespace: _USERNAME_-machinery
spec:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          username: _USERNAME_
  podSelector: {}
  policyTypes:
  - Ingress
